// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  forwardedRef={null}
  is="input"
/>
`;

exports[`<Input /> underline renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  forwardedRef={null}
  is="input"
  underline={true}
/>
`;
